--- a/views/partials/js-imports.ejs
+++ b/views/partials/js-imports.ejs
@@ -1,6 +1,3 @@
-<!-- Famblr JavaScript -->
-<script src="/js/famblr.js"></script>
-
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="/js/libraries/jquery.min.js"></script>
 <script src="/js/libraries/popper.min.js"></script>
@@ -66,3 +63,12 @@
 
 <!-- JWT Decode -->
 <script src="/js/libraries/jwt-decode.js"></script>
+
+<!-- Axios -->
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+<!-- Vue -->
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
+
+<!-- Famblr Custom JavaScript -->
+<script src="/js/famblr.js"></script>
