--- a/views/partials/create-comment.ejs
+++ b/views/partials/create-comment.ejs
@@ -14,7 +14,7 @@
   </ul>
 
 <!-- Reply Box -->
-<!-- I change this to a div instead of a form to stick with our no-forms idead.
+<!-- I change this to a div instead of a form to stick with our no-forms idea.
     This may be where we need to fix the alignment of the reply button -->
 <div class="comment-text d-flex align-items-center mt-3" >
     <input type="text" v-bind:id="post._id" class="form-control rounded" placeholder="Reply...">
