--- a/views/account.ejs
+++ b/views/account.ejs
@@ -78,7 +78,7 @@
                                                     Submit
                                                 </button>
                                                 <button @click="resetForm()" type="button" class="btn iq-bg-danger">
-                                                    Cancle
+                                                    Cancel
                                                 </button>
                                             </form>
                                         </div>
@@ -122,7 +122,7 @@
                                                     Submit
                                                 </button>
                                                 <button type="reset" class="btn iq-bg-danger">
-                                                    Cancle
+                                                    Cancel
                                                 </button>
                                             </form>
                                         </div>
