--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,7 +58,8 @@
                                         </div>
                                       </div>
                                     </a>
-                                    <a class="dropdown-item p-3" @click="deletePost(post._id)">
+                                    <a class="dropdown-item p-3" type="button" data-toggle="modal"
+                                      data-target="#deleteModal" @click="postToDelete = post._id">
                                       <div class="d-flex align-items-top">
                                         <div class="icon font-size-20"><i class="ri-close-circle-line"></i></div>
                                         <div class="data ml-2">
@@ -100,6 +101,32 @@
                     <div v-if="morePostsToLoad" class="col-sm-12 text-center">
                       <image src="/images/spinner_transparent.gif" style="margin: 0 auto;"></image>
                     </div>
+
+                    <!-- Confrim Delete Modal -->
+                    <div id="deleteModal" class="modal fade" tabindex="-1" role="dialog"
+                      aria-labelledby="deleteModalTitle" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title" id="deleteModalTitle">Delete Post</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">×</span>
+                            </button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Are you sure you want to delete this post?</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                              @click="postToDelete = null">Cancel</button>
+                            <button type="button" class="btn btn-danger" @click="deletePost()">
+                              Delete Post
+                            </button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
                   </div>
 
               </div>
@@ -120,6 +147,7 @@
                   offset: 0,
                   totalItems: null,
                   posts: [],
+                  postToDelete: null,
                 },
                 mounted: async function () {
                   this.user = jwt_decode(localStorage.famblrToken);
@@ -179,15 +207,20 @@
                       this.loading = false;
                     }
                   },
-                  deletePost: async function (postId) {
-                    console.log("Deleting: ", postId)
-                    this.posts = this.posts.filter(post => {
-                      return post._id != postId
-                    })
-
+                  deletePost: async function () {
                     try {
-                      let response = await axios.delete(`/api/posts/${postId}`)
+                      console.log("Deleting: ", this.postToDelete)
+
+                      let response = await axios.delete(`/api/posts/${this.postToDelete}`)
                       console.log("Post Deleted from DB")
+
+                      this.posts = this.posts.filter(post => {
+                        return post._id != this.postToDelete
+                      })
+
+                      this.postToDelete = null;
+                      $('#deleteModal').modal('hide')
+
                     } catch (error) {
                       console.error(error)
                     }
