--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
 
 <body>
   <div id="vue-app">
+
     <%- include ('partials/sidebar.ejs') %>
       <%- include ('partials/top-navbar.ejs') %>
         <%- include ('partials/right-sidebar.ejs') %>
@@ -19,115 +20,116 @@
                   <!-- Import the create post form -->
                   <%- include ('partials/create-post.ejs') %>
 
-                    <div id="post-list" style="width: 100%;">
+                    <!-- Divider -->
+                    <div class="col-sm-12">
+                      <hr class="mt-0">
+                    </div>
 
-                      <!-- Post -->
-                      <div v-for="(post, index) in posts" class="col-sm-12 famblrPost">
-                        <div class="iq-card iq-card-block iq-card-stretch iq-card-height">
-                          <div class="iq-card-body">
-                            <div class="user-post-data">
-                              <div class="d-flex flex-wrap">
+                    <!-- Post -->
+                    <div v-for="(post, index) in posts" class="col-sm-12 famblrPost">
+                      <div class="iq-card iq-card-block iq-card-stretch iq-card-height">
+                        <div class="iq-card-body">
+                          <div class="user-post-data">
+                            <div class="d-flex flex-wrap">
 
-                                <!-- Post Profile Image -->
-                                <div class="media-support-user-img mr-3">
-                                  <img class="rounded-circle img-fluid"
-                                    v-bind:src="post.userId.profilePicture ? '/uploads/' + post.userId.profilePicture : '/images/profile.png'"
-                                    alt="">
-                                </div>
+                              <!-- Post Profile Image -->
+                              <div class="media-support-user-img mr-3">
+                                <img class="rounded-circle img-fluid"
+                                  v-bind:src="post.userId.profilePicture ? '/uploads/' + post.userId.profilePicture : '/images/profile.png'"
+                                  alt="">
+                              </div>
 
-                                <!-- Post Name and Date -->
-                                <div class="media-support-info mt-2">
-                                  <h5 class="mb-0 d-inline-block"><a href="#" class="">
-                                      {{post.userId.firstName}} {{post.userId.lastName}}</a></h5>
-                                  <p class="mb-0 text-primary">{{ formatDate(post.date)}}</p>
-                                </div>
+                              <!-- Post Name and Date -->
+                              <div class="media-support-info mt-2">
+                                <h5 class="mb-0 d-inline-block"><a href="#" class="">
+                                    {{post.userId.firstName}} {{post.userId.lastName}}</a></h5>
+                                <p class="mb-0 text-primary">{{ formatDate(post.date)}}</p>
+                              </div>
 
-                                <!-- Post Context Menu -->
-                                <div v-if="post.userId._id == user._id" class="iq-card-post-toolbar">
-                                  <div class="dropdown">
-                                    <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                                      aria-expanded="false" role="button">
-                                      <i class="ri-more-fill"></i>
-                                    </span>
-                                    <div class="dropdown-menu m-0 p-0">
-                                      <a class="dropdown-item p-3" v-bind:href="`/posts/${post._id}/edit`">
-                                        <div class="d-flex align-items-top">
-                                          <div class="icon font-size-20"><i class="ri-edit-line"></i></div>
-                                          <div class="data ml-2">
-                                            <h6>Edit Post</h6>
-                                            <p class="mb-0">Make changes to your post</p>
-                                          </div>
+                              <!-- Post Context Menu -->
+                              <div v-if="post.userId._id == user._id" class="iq-card-post-toolbar">
+                                <div class="dropdown">
+                                  <span class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+                                    aria-expanded="false" role="button">
+                                    <i class="ri-more-fill"></i>
+                                  </span>
+                                  <div class="dropdown-menu m-0 p-0">
+                                    <a class="dropdown-item p-3" v-bind:href="`/posts/${post._id}/edit`">
+                                      <div class="d-flex align-items-top">
+                                        <div class="icon font-size-20"><i class="ri-edit-line"></i></div>
+                                        <div class="data ml-2">
+                                          <h6>Edit Post</h6>
+                                          <p class="mb-0">Make changes to your post</p>
                                         </div>
-                                      </a>
-                                      <a class="dropdown-item p-3" type="button" data-toggle="modal"
-                                        data-target="#deleteModal" @click="postToDelete = post._id">
-                                        <div class="d-flex align-items-top">
-                                          <div class="icon font-size-20"><i class="ri-close-circle-line"></i></div>
-                                          <div class="data ml-2">
-                                            <h6>Delete Post</h6>
-                                            <p class="mb-0">Permanently remove this post</p>
-                                          </div>
+                                      </div>
+                                    </a>
+                                    <a class="dropdown-item p-3" type="button" data-toggle="modal"
+                                      data-target="#deleteModal" @click="postToDelete = post._id">
+                                      <div class="d-flex align-items-top">
+                                        <div class="icon font-size-20"><i class="ri-close-circle-line"></i></div>
+                                        <div class="data ml-2">
+                                          <h6>Delete Post</h6>
+                                          <p class="mb-0">Permanently remove this post</p>
                                         </div>
-                                      </a>
-                                    </div>
+                                      </div>
+                                    </a>
                                   </div>
                                 </div>
-
                               </div>
-                            </div>
-
-                            <!-- Post Text -->
-                            <div class="mt-3">
-                              <p>{{ post.text }}</p>
-                            </div>
-
-                            <!-- Post Image -->
-                            <div v-if="post.image" class="user-post">
-                              <a><img v-bind:src="post.image" alt="post-image" class="img-fluid rounded w-100"></a>
-                            </div>
-
-                            <div class="comment-area mt-3">
-                              <hr>
-                              <!-- Comments -->
-
-                              <%- include('partials/create-comment.ejs') %>
 
                             </div>
+                          </div>
 
+                          <!-- Post Text -->
+                          <div class="mt-3">
+                            <p>{{ post.text }}</p>
+                          </div>
+
+                          <!-- Post Image -->
+                          <div v-if="post.image" class="user-post">
+                            <a><img v-bind:src="post.image" alt="post-image" class="img-fluid rounded w-100"></a>
+                          </div>
+
+                          <div class="comment-area mt-3">
+                            <hr>
+                            <!-- Comments -->
+
+                            <%- include('partials/create-comment.ejs') %>
+
+                          </div>
+
+                        </div>
+                      </div>
+                    </div>
+                    <!-- End of Posts -->
+
+                    <div v-if="morePostsToLoad" class="col-sm-12 text-center">
+                      <image src="/images/spinner_transparent.gif" style="margin: 0 auto;"></image>
+                    </div>
+
+                    <!-- Confrim Delete Modal -->
+                    <div id="deleteModal" class="modal fade" tabindex="-1" role="dialog"
+                      aria-labelledby="deleteModalTitle" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title" id="deleteModalTitle">Delete Post</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">×</span>
+                            </button>
+                          </div>
+                          <div class="modal-body">
+                            <p>Are you sure you want to delete this post?</p>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal"
+                              @click="postToDelete = null">Cancel</button>
+                            <button type="button" class="btn btn-danger" @click="deletePost()">
+                              Delete Post
+                            </button>
                           </div>
                         </div>
                       </div>
-                      <!-- End of Posts -->
-
-                      <div v-if="morePostsToLoad" class="col-sm-12 text-center">
-                        <image src="/images/spinner_transparent.gif" style="margin: 0 auto;"></image>
-                      </div>
-
-                      <!-- Confrim Delete Modal -->
-                      <div id="deleteModal" class="modal fade" tabindex="-1" role="dialog"
-                        aria-labelledby="deleteModalTitle" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <h5 class="modal-title" id="deleteModalTitle">Delete Post</h5>
-                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">×</span>
-                              </button>
-                            </div>
-                            <div class="modal-body">
-                              <p>Are you sure you want to delete this post?</p>
-                            </div>
-                            <div class="modal-footer">
-                              <button type="button" class="btn btn-secondary" data-dismiss="modal"
-                                @click="postToDelete = null">Cancel</button>
-                              <button type="button" class="btn btn-danger" @click="deletePost()">
-                                Delete Post
-                              </button>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-
                     </div>
 
                 </div>
@@ -140,8 +142,8 @@
     <%- include ('partials/js-imports.ejs') %>
 
       <script>
-        const loginApp = new Vue({
-          el: '#post-list',
+        const vueApp = new Vue({
+          el: '#vue-app',
           data: {
             user: null,
             loading: true,
@@ -150,6 +152,10 @@
             totalItems: null,
             posts: [],
             postToDelete: null,
+            newPost: {
+              text: "",
+              image: null
+            }
           },
           mounted: async function () {
             axios.defaults.headers.common['Authorization'] = `Bearer ${localStorage.famblrToken}`;
@@ -169,9 +175,6 @@
             };
           },
           computed: {
-            postId: function () {
-              return window.location.pathname.split("/")[2];
-            },
             morePostsToLoad: function () {
               return this.posts.length !== this.totalItems;
             }
@@ -184,7 +187,26 @@
 
               } catch (error) {
                 console.error(error)
-                // window.location.href = '/logout'
+                window.location.href = '/logout'
+              }
+            },
+            createPost: async function () {
+              try {
+                // Save new post to DB
+                let response = await axios.post(`/api/posts`, {
+                  contentText: this.newPost.text
+                });
+                console.log("Post created successfully")
+
+                // Add new post to list of posts
+                this.posts = [{ ...response.data }, ...this.posts]
+
+                // Reset New Post Input
+                this.newPost.text = "";
+                this.newPost.image = null;
+
+              } catch (error) {
+                console.error(error);
               }
             },
             createComment: async function (postId) {
