--- a/views/partials/create-comment.ejs
+++ b/views/partials/create-comment.ejs
@@ -6,8 +6,8 @@
                 class="avatar-35 rounded-circle img-fluid">
             </div>
             <div class="comment-data-block ml-3">
-                <h6>Monty Carlo</h6>
-                <p class="mb-0">Lorem ipsum dolor sit amet</p>
+                <h6>{{comment.userId.firstName}} {{comment.userId.lastName}}</h6>
+                <p class="mb-0">{{comment.content}}</p>
             </div>
         </div>
     </li>
@@ -19,6 +19,6 @@
 <div class="comment-text d-flex align-items-center mt-3" style="position: relative;">
     <input type="text" v-bind:id="post._id" class="form-control rounded" placeholder="Reply..."  style="padding-right: 130px;">
     <div class="comment-attagement d-flex">
-        <button type="submit" id="createComment" class="btn btn-light d-block mr-1" v-on:click="createComment(post._id)">Reply</button>
+      <button type="submit" id="createComment" class="btn btn-light d-block mr-1" v-on:click="createComment(post._id)">Reply</button>
     </div>
 </div>
