--- a/views/partials/js-imports.ejs
+++ b/views/partials/js-imports.ejs
@@ -70,5 +70,8 @@
 <!-- Vue -->
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
 
+<!-- Socket.IO -->
+<script src="/js/libraries/socket.io.min.js"></script>
+
 <!-- Famblr Custom JavaScript -->
 <script src="/js/famblr.js"></script>
