update the edit post page - load user from api

--- a/views/edit-post.ejs
+++ b/views/edit-post.ejs
@@ -36,7 +36,7 @@
                                                     <textarea v-model="post.text" type="text"
                                                         class="form-control rounded" rows="2"
                                                         style="border:none; line-height: 1.25; min-height: 3em;"
-                                                        id="postText" required><%= post.text %></textarea>
+                                                        id="postText" required></textarea>
                                                 </div>
                                             </div>
                                             <hr>
